// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/post_view/ShowMore should match snapshot 1`] = `
<div
  className="post-message post-message--collapsed"
>
  <div
    className="post-message__text-container"
    style={
      Object {
        "maxHeight": 200,
      }
    }
  >
    <div>
      <p>
        text
      </p>
    </div>
  </div>
</div>
`;

exports[`components/post_view/ShowMore should match snapshot, PostAttachment on collapsed view 1`] = `
<div
  className="post-message post-message--collapsed post-message--overflow"
>
  <div
    className="post-message__text-container"
    style={
      Object {
        "maxHeight": 200,
      }
    }
  />
  <div
    className="post-collapse"
  >
    <div
      className="post-attachment-collapse__show-more"
    >
      <div
        className="post-collapse__show-more-line"
      />
      <button
        className="post-collapse__show-more-button"
        id="showMoreButton"
        onClick={[Function]}
      >
        <span
          className="fa fa-angle-down"
        />
        Show more
      </button>
      <div
        className="post-collapse__show-more-line"
      />
    </div>
  </div>
</div>
`;

exports[`components/post_view/ShowMore should match snapshot, PostAttachment on expanded view 1`] = `
<div
  className="post-message post-message--expanded post-message--overflow"
>
  <div
    className="post-message__text-container"
    style={
      Object {
        "maxHeight": undefined,
      }
    }
  />
  <div
    className="post-collapse"
  >
    <div
      className="post-attachment-collapse__show-more"
    >
      <div
        className="post-collapse__show-more-line"
      />
      <button
        className="post-collapse__show-more-button"
        id="showMoreButton"
        onClick={[Function]}
      >
        <span
          className="fa fa-angle-up"
        />
        Show less
      </button>
      <div
        className="post-collapse__show-more-line"
      />
    </div>
  </div>
</div>
`;

exports[`components/post_view/ShowMore should match snapshot, PostMessageView on collapsed view 1`] = `
<div
  className="post-message post-message--collapsed post-message--overflow"
>
  <div
    className="post-message__text-container"
    style={
      Object {
        "maxHeight": 200,
      }
    }
  />
  <div
    className="post-collapse"
  >
    <div
      className="post-collapse__show-more"
    >
      <div
        className="post-collapse__show-more-line"
      />
      <button
        className="post-collapse__show-more-button"
        id="showMoreButton"
        onClick={[Function]}
      >
        <span
          className="fa fa-angle-down"
        />
        Show more
      </button>
      <div
        className="post-collapse__show-more-line"
      />
    </div>
  </div>
</div>
`;

exports[`components/post_view/ShowMore should match snapshot, PostMessageView on expanded view 1`] = `
<div
  className="post-message post-message--expanded post-message--overflow"
>
  <div
    className="post-message__text-container"
    style={
      Object {
        "maxHeight": undefined,
      }
    }
  />
  <div
    className="post-collapse"
  >
    <div
      className="post-collapse__show-more"
    >
      <div
        className="post-collapse__show-more-line"
      />
      <button
        className="post-collapse__show-more-button"
        id="showMoreButton"
        onClick={[Function]}
      >
        <span
          className="fa fa-angle-up"
        />
        Show less
      </button>
      <div
        className="post-collapse__show-more-line"
      />
    </div>
  </div>
</div>
`;

exports[`components/post_view/ShowMore should match snapshot, PostMessageView on expanded view with compactDisplay 1`] = `
<div
  className="post-message post-message--expanded post-message--overflow"
>
  <div
    className="post-message__text-container"
    style={
      Object {
        "maxHeight": undefined,
      }
    }
  />
  <div
    className="post-collapse"
  >
    <div
      className="post-collapse__show-more"
    >
      <div
        className="post-collapse__show-more-line"
      />
      <button
        className="post-collapse__show-more-button"
        id="showMoreButton"
        onClick={[Function]}
      >
        <span
          className="fa fa-angle-up"
        />
        Show less
      </button>
      <div
        className="post-collapse__show-more-line"
      />
    </div>
  </div>
</div>
`;
